# courses

./: .gitignore  .pre-commit-config.yaml  README.md
ckad/: 01-shell-pod.yaml  02-config-demo.yaml  bb-cjob.yaml  bb-pod.yaml  bb-user101.yaml  cuda-pod.yaml  limit-range-cpu-mem-namespace.yaml  m2-nginx-bb-pod.yaml  multi-bb-pods.yaml  myns.yaml  n-cpu.yaml  namespace-limit-range.yaml  ndp-v1.yaml  ndp-v2.yaml  ng-cmap.yaml  ng-nod-sel.yaml  nginx-pod-my-namespace.sh  nsvc.yaml  pod-bb-2-mounts.yaml  pod-bb-log.yaml  pod-bb-pvc-myvolclaim-01.yaml  pod-bb-pvc-myvolclaim-02.yaml  pod-limit-namespace.yaml  pod-nginx-liveness-ls.yaml  pod-nginx-readness-get.yaml  pod-nginx-secret.yaml  pod-service-account.yaml  policy.yaml  pv-myvol-10Gi.yaml  pvc-myvol-4Gi.yaml  term-job.yaml
dwrangler/: airquality.ipynb  pyproject.toml  rollingW.ipynb  timeseries.ipynb  titanic.ipynb
ints/cnrts/bookie/: pyproject.toml
ints/cnrts/bookie/bookie/: __init__.py  cli.py  data.py  xanges.py
ints/cnrts/bookie/bookie/tests/: test_data.py
katas/: 07_review.txt  README.md
langchain/: requirements.txt
leet/: reg.py  subCat30.py  swap.py
nodejs/: app-buffer.js  app-call.js  app-callback.js  app-emitter.js  app-es6-arrays.js  app-es6.js  app-fs.js  app-inheritance-greeter.js  app-node-emitter.js  app-pipe.js  app-streams.js  app-webserver-json.js  app-webserver-routed.js  app-webserver-simple.js  app-webserver.js  app.js  func.js  greet.txt  index.html  inh.js  inheritance-classes.js  inheritance-greeter.js  inheritance-inherit.js  inheritance-super.js  jsconfg.json  lorem.txt  mods.js  (+5 more)
(+227 files in other folders)
