[project]
name = "bookie"
version = "0.0.1"
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    "requests",
    "PyJWT==2.8.0",
    "cryptography==43.0.1",
]
[projects.scripts]
cli = "bookie:main"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages]
find = {}
